src/objects/Deferred_Developer_Fee_Payment_Balance__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Financial_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Financial Item</label>
        <referenceTo>Actual_Financial__c</referenceTo>
        <relationshipLabel>Deferred Developer Fee Payments/Balances</relationshipLabel>
        <relationshipName>Deferred_Developer_Fee_Payments_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DDF_Balance__c</fullName>
        <label>DDF Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDF_Interest__c</fullName>
        <label>DDF Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDF_Total_Outstanding_Balance__c</fullName>
        <label>DDF Total Outstanding Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DDF_Total_Payment__c</fullName>
        <label>DDF Total Payment</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deferred_Developer_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferred Developer Fee</label>
        <referenceTo>Deferred_Developer_Fee__c</referenceTo>
        <relationshipLabel>Deferred Developer Fee Payments/Balances</relationshipLabel>
        <relationshipName>Deferred_Developer_Fee_Payments_Balances</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_to_DDF_Balance__c</fullName>
        <label>Payment to DDF Balance</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_to_DDF_Interest__c</fullName>
        <label>Payment to DDF Interest</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Deferred Developer Fee Payment/Balance</label>
    <nameField>
        <displayFormat>DDF-{0}</displayFormat>
        <label>Deferred Developer Fee Payments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferred Developer Fee Payments/Balances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>